--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "framer-motion": "^11.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-particles": "^2.12.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-tsparticles": "^2.12.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
