--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@tsparticles/all": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
+    "dat.gui": "^0.7.9",
     "framer-motion": "^11.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
