--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "dat.gui": "^0.7.9",
     "framer-motion": "^11.5.4",
     "react": "^18.3.1",
+    "react-background-slider": "^4.0.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-lottie": "^1.2.4",
     "react-router-dom": "^6.26.2",
