--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^4.3.0",
+"@babel/plugin-proposal-private-property-in-object": "^7.10.4" 
+,
     "@react-three/fiber": "^8.17.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
